@@ -1,7 +1,7 @@
 <%-- $Id$ --%>
 <%-- Include Border.jsp, then insert page content, then include this. --%>
 <hr>
-Copyright 2000 Primix Solutions and released under the 
+Copyright 2000, 2001 <a href="http://www.primix.com">Primix</a> and released under the 
 <a target="gnu-copyleft" href="http://www.gnu.org/copyleft/lesser.html">Lesser GNU Public License</a>.
 <p>JSP version
 </body>
