@@ -1,13 +1,9 @@
 <jwc id="border">
 <!-- $Id$ -->
 
-<jwc id="ifError">
-<font color=red><jwc id="insertError"/></font>
-</jwc>
+<jwc id="showError"/>
 
-<jwc id="ifMessage">
-<p><font size=+1><jwc id="insertMessage"/></font>
-</jwc>
+<jwc id="showMessage"/>
 
 <p>Search for books:
 
